--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vendors/spdlog"]
 	path = vendors/spdlog
 	url = https://github.com/gabime/spdlog.git
+[submodule "vendors/italo-mq"]
+	path = vendors/italo-mq
+	url = https://github.com/ilie1988/italo-mq
