--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.1)
 
-function(loki_add_subdirectory SRC)
+function(italo_add_subdirectory SRC)
     get_filename_component(target ${SRC} NAME)
     if (TARGET ${target})
         return()
@@ -31,14 +31,14 @@ if (sodium_VERSION VERSION_LESS 1.0.17)
 endif()
 include_directories(${sodium_INCLUDE_DIR})
 
-loki_add_subdirectory(common)
-loki_add_subdirectory(utils)
-loki_add_subdirectory(crypto)
-loki_add_subdirectory(pow)
-loki_add_subdirectory(storage)
-loki_add_subdirectory(httpserver)
-loki_add_subdirectory(vendors/spdlog)
+italo_add_subdirectory(common)
+italo_add_subdirectory(utils)
+italo_add_subdirectory(crypto)
+italo_add_subdirectory(pow)
+italo_add_subdirectory(storage)
+italo_add_subdirectory(httpserver)
+italo_add_subdirectory(vendors/spdlog)
 
 if (BUILD_TESTS)
-    loki_add_subdirectory(unit_test)
+    italo_add_subdirectory(unit_test)
 endif ()
